[FIX] Align breakpoints and improve responsiveness

--- a/client/src/components/EventForm/eventForm.scss
+++ b/client/src/components/EventForm/eventForm.scss
@@ -5,6 +5,7 @@
   border-radius: 8px;
   padding: 0 40px 40px;
   display: inline-block;
+  
 
   &__title {
     font-family: $montserrat;
@@ -16,9 +17,17 @@
     margin: 0 auto;
     padding: 0 20px;
   }
+  
 }
 
 .form-buttons {
   display: flex;
   justify-content: space-between;
+}
+
+@media only screen and (max-width: 1024px) {
+  .form-buttons {
+    display: flex;
+    flex-direction: column; 
+  }
 }
