--- a/client/src/pages/MyEventsPage/MyEventsPage.scss
+++ b/client/src/pages/MyEventsPage/MyEventsPage.scss
@@ -8,26 +8,25 @@
   &__controls {
     position: fixed;
     height: fit-content;
-    width: 30vw;
+    width: 20vw;
   }
 
   &__content {
     @include flexCenter;
-    width: 70vw;
+    width: 80vw;
     margin-left: auto;
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
   .my-events {
-    
     &__controls {
       position: static;
       width: 100%;
       margin-bottom: 40px;
     }
 
-    &__right-column {
+    &__content {
       width: 100%;
     }
   }
